# sys-screenuploader

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  NOTICE  README.md  config.ini  screenuploader.json  toolbox.json
cmake/: FindLIBNX.cmake  FindLIBTWILI.cmake  nx-utils.cmake  options.cmake  utils.cmake
include/: CMakeLists.txt  config.hpp  emummc_cfg.h  inih.h  sockets.hpp  utils.hpp
scripts/: release.sh  upload.sh
server/: requirements.txt  telegram_upload.py
src/: CMakeLists.txt  config.cpp  config.hpp  logger.hpp  main.cpp  project.h  project.h.in  sockets.cpp  upload.cpp  upload.hpp  utils.cpp  utils.hpp
